# Copyright (C) 2023 Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "se05x"
version = "0.1.1"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]

edition = "2021"
repository = "https://github.com/Nitrokey/se05x"
license = "LGPL-3.0-only"
description = "Driver for the NXP SE05X"

[dependencies]
aes = { version = "0.8.3", optional = true }
bitflags = "2.3.2"
byteorder = { version = "1", default-features = false }
cmac = { version = "0.7.2", optional = true }
crc16 = "0.4"
delog = "0.1"
embedded-hal = "0.2.7"
heapless = "0.7"
hex-literal = "0.4.1"
iso7816 = "0.1.1"
lpc55-hal = { version = "0.3.0", optional = true }
nrf-hal-common = { version = "0.15.0", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false }
serde = { version = "1.0.185", default-features = false, features = ["derive"], optional = true }
serde-byte-array = { version = "0.1.2", default-features = false, optional = true }
typed-builder = { version = "0.18.0", optional = true }

[features]
default = ["aes-session"]
serde = ["dep:serde", "serde-byte-array"]
builder = ["typed-builder"]

log-all = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []

nrf = ["nrf-hal-common"]
lpc55 = ["lpc55-hal"]

aes-session = ["aes", "cmac", "rand"]

[package.metadata.docs.rs]
features = ["aes-session", "builder", "serde"]
