# Copyright (C) 2023 Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "se05x"
version = "0.1.7"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]

edition = "2021"
repository = "https://github.com/Nitrokey/se05x"
license = "LGPL-3.0-only"
description = "Driver for the NXP SE05X"

[dependencies]
aes = { version = "0.8.3", optional = true }
bitflags = "2.3.2"
cmac = { version = "0.7.2", optional = true }
crc16 = "0.4"
delog = "0.1"
embedded-hal = "0.2.7"
heapless = "0.7"
hex-literal = "0.4.1"
iso7816 = "0.1.1"
lpc55-hal = { version = "0.3.0", optional = true }
lpc55-hal-04 = { package = "lpc55-hal", version = "0.4.0", optional = true }
nrf-hal-common = { version = "0.15.0", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false }
serde = { version = "1.0.185", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11.14", optional = true, default-features = false }
typed-builder = { version = "0.20.0", optional = true }

[features]
default = ["aes-session"]
serde = ["dep:serde", "dep:serde_bytes"]
builder = ["typed-builder"]

log-all = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []

nrf = ["nrf-hal-common"]
lpc55 = ["lpc55-v0.3"]
"lpc55-v0.3" = ["dep:lpc55-hal"]
"lpc55-v0.4" = ["dep:lpc55-hal-04"]

aes-session = ["aes", "cmac", "rand"]
serde_bytes = ["dep:serde_bytes"]

[package.metadata.docs.rs]
features = ["aes-session", "builder", "serde"]

[patch.crates-io]
lpc55-hal = { git = "https://github.com/Nitrokey/lpc55-hal", tag = "v0.3.0-nitrokey.2" }
