# Copyright (C) 2023 Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "se05x"
version = "0.3.0"
authors = ["Nitrokey GmbH <info@nitrokey.com>"]

edition = "2021"
repository = "https://github.com/Nitrokey/se05x"
license = "LGPL-3.0-only"
description = "Driver for the NXP SE05X"

[dependencies]
aes = { version = "0.8.3", optional = true }
bitflags = "2.3.2"
cmac = { version = "0.7.2", optional = true }
crc16 = "0.4"
delog = "0.1"
embedded-hal-v0_2_7 = { package = "embedded-hal", version = "0.2.7", optional = true }
embedded-hal-v1_0 = { package = "embedded-hal", version = "1.0", optional = true }

heapless = "0.9"
hex-literal = "0.4.1"
iso7816 = "0.2.0"
lpc55-hal = { version = "0.3.0", optional = true }
lpc55-hal-04 = { package = "lpc55-hal", version = "0.4.0", optional = true }
nrf-hal-common = { version = "0.15.0", optional = true }
rand = { version = "0.8.5", optional = true, default-features = false }
serde = { version = "1.0.185", default-features = false, features = ["derive"], optional = true }
serde_bytes = { version = "0.11.14", optional = true, default-features = false }
typed-builder = { version = "0.23.2", optional = true }

[features]
default = ["aes-session"]
serde = ["dep:serde", "dep:serde_bytes"]
builder = ["typed-builder"]
"embedded-hal-v0.2.7" = ["dep:embedded-hal-v0_2_7"]
"embedded-hal-v1.0" = ["dep:embedded-hal-v1_0"]

log-all = []
log-trace = []
log-debug = []
log-info = []
log-warn = []
log-error = []
log-none = []

nrf = ["nrf-hal-common", "embedded-hal-v0.2.7"]
"lpc55-v0.3" = ["dep:lpc55-hal", "embedded-hal-v0.2.7"]
"lpc55-v0.4" = ["dep:lpc55-hal-04", "embedded-hal-v0.2.7"]

aes-session = ["aes", "cmac", "rand"]

[package.metadata.docs.rs]
features = ["aes-session", "builder", "serde"]

[patch.crates-io]
lpc55-hal = { git = "https://github.com/Nitrokey/lpc55-hal", tag = "v0.3.0-nitrokey.2" }
